# asteroid-belt

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  launch.sh  pyproject.toml
asteroid_belt/: __init__.py  cli.py
asteroid_belt/agent/: __init__.py  llm.py  migrate.py  prompt.txt  regen.py  run.py  tools.py
asteroid_belt/data/: ingest.py  splits.py
asteroid_belt/engine/: composition.py  cost.py  guards.py  result.py  runner.py
asteroid_belt/metrics/: composite.py  primitives.py
asteroid_belt/pool/: __init__.py  bins.py  fees.py  position.py  position_state.py  state.py
asteroid_belt/server/: app.py  schemas.py  trials.py
asteroid_belt/store/: agent_runs.py  results.py  runs.py  schema.sql
asteroid_belt/strategies/: base.py  multiday_cook_up.py  precision_curve.py
tests/unit/: test_action_types.py  test_agent_tools.py  test_backtest_result.py  test_bar_adapter.py  test_cli_ingest.py  test_data_splits.py  test_engine_apply_action.py  test_engine_cost.py  test_engine_guards.py  test_engine_runner_scaffold.py  test_engine_runner_trajectory.py  test_event_types.py  test_ingest.py  test_metrics_composite.py  test_metrics_primitives.py  test_pool_bins.py  test_pool_fees.py  test_pool_position.py  test_pool_state.py  test_position_state.py  test_pro_rata_fees.py  test_server_bars.py  test_server_health.py  test_server_pools.py  test_server_trials.py  test_store_agent_runs.py  test_store_results.py  test_store_runs.py  (+2 more)
web/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
(+24 files in other folders)
